--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "robots-mongodb",
   "version": "1.0.0",
-  "description": "",
   "main": "data.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,9 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongodb": "^2.2.31",
+    "express-session": "^1.15.5",
+    "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
     "mustache-express": "^1.2.5"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erinwoody/robots-login.git"
+  },
+  "bugs": {
+    "url": "https://github.com/erinwoody/robots-login/issues"
+  },
+  "homepage": "https://github.com/erinwoody/robots-login#readme",
+  "description": ""
 }
